--- a/Requirements.txt
+++ b/Requirements.txt
@@ -10,3 +10,10 @@ Stripe Integration
 * JavaScript should send user fields and card token to our rails app, which will be then validated
 * Once validated the rails app should send the user info and card toek to stripe server to set up a subscription
 * Rails should save user info to our database
+
+User Profiles
+* Each user should have one profile
+* User should see link to new profile form upon signing up
+* User should be able to create and view their user profile
+* User profile should have a profile picture
+* User should be able to view all user profiles
